Update CircleCI config file
Again, lots has changed since this file was last updated so there are a
few fundamental things that have been altered.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 version: 2.1
 
 orbs:
-  codecov: codecov/codecov@1.0.5
-  coverage-reporter: codacy/coverage-reporter@10.0.3
+  codecov: codecov/codecov@4.0.1
+  coverage-reporter: codacy/coverage-reporter@13.15.1
 
 commands:
   full_checkout:
@@ -29,7 +29,7 @@ commands:
 jobs:
   build_gcc_debug:
     docker:
-      - image: circleci/buildpack-deps:focal
+      - image: cimg/base:current
     steps:
       - run:
           name: "Install required packages"
@@ -37,14 +37,14 @@ jobs:
       - full_checkout
       - run:
           name: "Configure GCC debug build"
-          command: cmake -H. -B../Debug-build -DINCH_UNIT_TESTS=ON -DINCH_CODE_COVERAGE=ON -DCOVERAGE_COMMAND=/usr/bin/gcov-9 -DCMAKE_CXX_COMPILER=/usr/bin/g++ -DCMAKE_BUILD_TYPE=Debug
+          command: cmake -H. -B../Debug-build -DINCH_UNIT_TESTS=ON -DINCH_CODE_COVERAGE=ON -DCOVERAGE_COMMAND=/usr/bin/gcov -DCMAKE_CXX_COMPILER=/usr/bin/g++ -DCMAKE_BUILD_TYPE=Debug
       - build_and_test:
           dir: ../Debug-build
       - run:
           name: "Generate code coverage metrics"
           command: |
             cd ../Debug-build
-            lcov --directory . --capture --gcov-tool /usr/bin/gcov-9 --output-file coverage.info
+            lcov --directory . --capture --gcov-tool /usr/bin/gcov --output-file coverage.info
             lcov --remove coverage.info '/usr/*' '*/tests/*' '*/external/*' --output-file coverage.info
             lcov --list coverage.info
             # Started using the codecov orb for upload
@@ -60,7 +60,7 @@ jobs:
 
   build_gcc_release:
     docker:
-      - image: circleci/buildpack-deps:focal
+      - image: cimg/base:current
     steps:
       - run: sudo apt update && sudo apt install -y git cmake ninja-build gcc g++
       - full_checkout
@@ -70,7 +70,7 @@ jobs:
 
   build_clang_debug:
     docker:
-      - image: circleci/buildpack-deps:focal
+      - image: cimg/base:current 
     steps:
       - run: sudo apt update && sudo apt install -y git cmake ninja-build clang llvm
       - full_checkout
@@ -80,7 +80,7 @@ jobs:
 
   build_clang_release:
     docker:
-      - image: circleci/buildpack-deps:focal
+      - image: cimg/base:current
     steps:
       - run: sudo apt update && sudo apt install -y git cmake ninja-build clang llvm
       - full_checkout
