Fix the numerous typos in the last few commits

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
       - codecov/upload:
           # A new step puts us into the repo folder
           file: ../Debug-build/coverage.info
-          conf: codecov.yml
+          # conf: codecov.yml
       - coverage-reporter/send_report:
           coverage-reports: '../Debug-build/coverage.info'
           project-token: $CODACY_PROJECT_TOKEN
