--- a/.github/workflows/cmake_build.yml
+++ b/.github/workflows/cmake_build.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        compiler: [clang++, g++]
+        compiler: [clang++-15, g++]
         type: [Debug, Release]
 
     steps:
@@ -28,10 +28,10 @@ jobs:
           submodules: true
 
       - name: Install dependencies
-        run: sudo apt update && sudo apt install -y cmake ninja-build clang gcc g++ clang
+        run: sudo apt update && sudo apt install -y cmake ninja-build gcc g++ clang-15
 
       - name: Configure
-        run: cmake -GNinja -H. -B../Build -DINCH_UNITS_TEST=ON -DCMAKE_CXX_COMPILER=/usr/bin/${{ matrix.compiler }} -DCMAKE_BUILD_TYPE=${{ matrix.type }}
+        run: cmake -GNinja -H. -B../Build -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/${{ matrix.compiler }} -DCMAKE_BUILD_TYPE=${{ matrix.type }}
 
       - name: Build
         run: cmake --build ../Build
