--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
       - full_checkout
       - run:
           name: "Configure GCC debug build"
-          command: cmake -H. -B../Debug-build -DINCH_UNIT_TESTS=ON -DINCH_CODE_COVERAGE=ON -DCOVERAGE_COMMAND=/usr/bin/gcov -DCMAKE_CXX_COMPILER=/usr/bin/g++ -DCMAKE_BUILD_TYPE=Debug
+          command: cmake -H. -B../Debug-build -DINCH_UNIT_TESTS=ON -DINCH_CODE_COVERAGE=ON -DCMAKE_CXX_COMPILER=/usr/bin/g++ -DCMAKE_BUILD_TYPE=Debug
       - build_and_test:
           dir: ../Debug-build
       - run:
@@ -47,13 +47,9 @@ jobs:
             lcov --directory . --capture --gcov-tool /usr/bin/gcov --output-file coverage.info
             lcov --remove coverage.info '/usr/*' '*/tests/*' '*/external/*' --output-file coverage.info
             lcov --list coverage.info
-            # Started using the codecov orb for upload
-            # No idea why this doesn't upload correctly to codecov.io, leaving it in for ... reasons
-            # bash <(curl -s https://codecov.io/bash) -f coverage.info || echo "Codecov did not collect coverage reports"
       - codecov/upload:
           # A new step puts us into the repo folder
-          file: ../Debug-build/coverage.info
-          # conf: codecov.yml
+          # file: ../Debug-build/coverage.info
       - coverage-reporter/send_report:
           coverage-reports: '../Debug-build/coverage.info'
           project-token: $CODACY_PROJECT_TOKEN
