--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
             lcov --directory . --capture --gcov-tool /usr/bin/gcov --output-file coverage.info
             lcov --remove coverage.info '/usr/*' '*/tests/*' '*/external/*' --output-file coverage.info
             lcov --list coverage.info
-      - codecov/upload:
+      - codecov/upload
           # A new step puts us into the repo folder
           # file: ../Debug-build/coverage.info
       - coverage-reporter/send_report:
