--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ commands:
     steps:
       - run:
           name: "Build the binary"
-          command: cmake --build <<parameters.dir>> -j 2
+          command: cmake --build <<parameters.dir>>
       - run:
           name: "Run the tests"
           command: cd <<parameters.dir>> && ctest -j2 -V
@@ -33,11 +33,11 @@ jobs:
     steps:
       - run:
           name: "Install required packages"
-          command: sudo apt update && sudo apt install -y git cmake lcov gcc g++
+          command: sudo apt update && sudo apt install -y git cmake ninja-build lcov gcc g++
       - full_checkout
       - run:
           name: "Configure GCC debug build"
-          command: cmake -H. -B../Debug-build -DINCH_UNIT_TESTS=ON -DINCH_CODE_COVERAGE=ON -DCMAKE_CXX_COMPILER=/usr/bin/g++ -DCMAKE_BUILD_TYPE=Debug
+          command: cmake -GNinja -H. -B../Debug-build -DINCH_UNIT_TESTS=ON -DINCH_CODE_COVERAGE=ON -DCMAKE_CXX_COMPILER=/usr/bin/g++ -DCMAKE_BUILD_TYPE=Debug
       - build_and_test:
           dir: ../Debug-build
       - run:
@@ -49,7 +49,7 @@ jobs:
             lcov --list coverage.info
       - codecov/upload:
           cli_args: '-v'
-          file: ../Debug-build/coverage.info
+          file: ${HOME}/Debug-build/coverage.info
       - coverage-reporter/send_report:
           coverage-reports: '../Debug-build/coverage.info'
           project-token: $CODACY_PROJECT_TOKEN
