Set up windows builds for github actions
Rename the original linux only actions file to something less generic.

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1,12 +1,10 @@
-name: BuildAndTest
+name: Linux
 
 on: #[push, pull_request]
   push:
     paths-ignore:
       - '*.md'
-      - 'appveyor.yml'
       - '.gitlab-ci.yml'
-      - '.travis.yml'
       - '.circleci/**'
       - 'docs/**'
       - 'data_files/**'
