--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        compiler: [clang++-15, g++]
+        compiler: [clang++, g++]
         type: [Debug, Release]
 
     steps:
@@ -26,7 +26,7 @@ jobs:
           submodules: true
 
       - name: Install dependencies
-        run: sudo apt update && sudo apt install -y cmake ninja-build gcc g++ clang-15
+        run: sudo apt update && sudo apt install -y cmake ninja-build gcc g++ clang
 
       - name: Configure
         run: cmake -GNinja -H. -B../Build -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/${{ matrix.compiler }} -DCMAKE_BUILD_TYPE=${{ matrix.type }}
