Config updates to get clang builds working
It looks like the install of clang is corrupt. Not sure why so lets try
a few things.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
       - run:
           name: "Install required packages"
-          command: sudo apt update && sudo apt install -y git cmake ninja-build build-essential lcov gcc g++
+          command: sudo apt update && sudo apt install -y git cmake ninja-build lcov gcc g++
       - full_checkout
       - run:
           name: "Configure GCC debug build"
@@ -58,31 +58,31 @@ jobs:
     machine:
       image: ubuntu-2404:current
     steps:
-      - run: sudo apt update && sudo apt install -y git cmake ninja-build build-essential gcc g++
+      - run: sudo apt update && sudo apt install -y git cmake ninja-build gcc g++
       - full_checkout
-      - run: cmake -GNinja -H. -B../Release-build -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/g++ -DCMAKE_BUILD_TYPE=Release
+      - run: cmake -GNinja -H. -B./build -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/g++ -DCMAKE_BUILD_TYPE=Release
       - build_and_test:
-          dir: ../Release-build
+          dir: build
 
   build_clang_debug:
     machine:
       image: ubuntu-2404:current 
     steps:
-      - run: sudo apt update && sudo apt install -y git cmake ninja-build build-essential clang llvm
+      - run: sudo apt update && sudo apt install -y git cmake ninja-build gcc g++ clang
       - full_checkout
-      - run: cmake -GNinja -H. -B../Debug-build -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/clang++ -DCMAKE_BUILD_TYPE=Debug
+      - run: cmake -GNinja -H. -B./build -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/clang++ -DCMAKE_BUILD_TYPE=Debug
       - build_and_test:
-          dir: ../Debug-build
+          dir: build
 
   build_clang_release:
     machine:
       image: ubuntu-2404:current
     steps:
-      - run: sudo apt update && sudo apt install -y git cmake ninja-build build-essential clang llvm
+      - run: sudo apt update && sudo apt install -y git cmake ninja-build gcc g++ clang
       - full_checkout
-      - run: cmake -GNinja -H. -B../Release-build -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/clang++ -DCMAKE_BUILD_TYPE=Release
+      - run: cmake -GNinja -H. -B./build -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/clang++ -DCMAKE_BUILD_TYPE=Release
       - build_and_test:
-          dir: ../Release-build
+          dir: build
 
 workflows:
   version: 2.1
